// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`UserDetails > renders in editable mode 1`] = `
<ul
  class="details editable"
  data-v-589db232=""
>
  
  <li
    data-v-589db232=""
  >
    <span
      class="v-chip v-theme--light v-chip--density-default v-chip--size-default v-chip--variant-tonal detail"
      data-v-589db232=""
      draggable="false"
    >
      
      <!---->
      <span
        class="v-chip__underlay"
      />
      
      <!---->
      <!---->
      <div
        class="v-chip__content"
        data-no-activator=""
      >
        
        <i
          aria-hidden="true"
          class="mdi mdi-school-outline mdi v-icon notranslate v-theme--light v-icon--size-default text-cockpit-highlight mr-2"
          data-v-589db232=""
        />
         I am a student 
        <button
          data-v-589db232=""
        >
          <i
            aria-hidden="true"
            class="mdi-close mdi v-icon notranslate v-theme--light v-icon--size-default"
            data-v-589db232=""
          />
        </button>
        
      </div>
      <!---->
      <!---->
    </span>
  </li>
  <li
    data-v-589db232=""
  >
    <span
      class="v-chip v-theme--light v-chip--density-default v-chip--size-default v-chip--variant-tonal detail"
      data-v-589db232=""
      draggable="false"
    >
      
      <!---->
      <span
        class="v-chip__underlay"
      />
      
      <!---->
      <!---->
      <div
        class="v-chip__content"
        data-no-activator=""
      >
        
        <i
          aria-hidden="true"
          class="mdi mdi-briefcase-outline mdi v-icon notranslate v-theme--light v-icon--size-default text-cockpit-highlight mr-2"
          data-v-589db232=""
        />
         I am a worker 
        <button
          data-v-589db232=""
        >
          <i
            aria-hidden="true"
            class="mdi-close mdi v-icon notranslate v-theme--light v-icon--size-default"
            data-v-589db232=""
          />
        </button>
        
      </div>
      <!---->
      <!---->
    </span>
  </li>
  <li
    data-v-589db232=""
  >
    <span
      class="v-chip v-theme--light v-chip--density-default v-chip--size-default v-chip--variant-tonal detail"
      data-v-589db232=""
      draggable="false"
    >
      
      <!---->
      <span
        class="v-chip__underlay"
      />
      
      <!---->
      <!---->
      <div
        class="v-chip__content"
        data-no-activator=""
      >
        
        <i
          aria-hidden="true"
          class="mdi mdi-briefcase-outline mdi v-icon notranslate v-theme--light v-icon--size-default text-cockpit-highlight mr-2"
          data-v-589db232=""
        />
         I really like my job 
        <button
          data-v-589db232=""
        >
          <i
            aria-hidden="true"
            class="mdi-close mdi v-icon notranslate v-theme--light v-icon--size-default"
            data-v-589db232=""
          />
        </button>
        
      </div>
      <!---->
      <!---->
    </span>
  </li>
  <li
    data-v-589db232=""
  >
    <span
      class="v-chip v-theme--light v-chip--density-default v-chip--size-default v-chip--variant-tonal detail"
      data-v-589db232=""
      draggable="false"
    >
      
      <!---->
      <span
        class="v-chip__underlay"
      />
      
      <!---->
      <!---->
      <div
        class="v-chip__content"
        data-no-activator=""
      >
        
        <i
          aria-hidden="true"
          class="mdi mdi-web mdi v-icon notranslate v-theme--light v-icon--size-default text-cockpit-highlight mr-2"
          data-v-589db232=""
        />
         English 
        <button
          data-v-589db232=""
        >
          <i
            aria-hidden="true"
            class="mdi-close mdi v-icon notranslate v-theme--light v-icon--size-default"
            data-v-589db232=""
          />
        </button>
        
      </div>
      <!---->
      <!---->
    </span>
  </li>
  <li
    data-v-589db232=""
  >
    <span
      class="v-chip v-theme--light v-chip--density-default v-chip--size-default v-chip--variant-tonal detail"
      data-v-589db232=""
      draggable="false"
    >
      
      <!---->
      <span
        class="v-chip__underlay"
      />
      
      <!---->
      <!---->
      <div
        class="v-chip__content"
        data-no-activator=""
      >
        
        <i
          aria-hidden="true"
          class="mdi mdi-map-marker-outline mdi v-icon notranslate v-theme--light v-icon--size-default text-cockpit-highlight mr-2"
          data-v-589db232=""
        />
         Berlin 
        <button
          data-v-589db232=""
        >
          <i
            aria-hidden="true"
            class="mdi-close mdi v-icon notranslate v-theme--light v-icon--size-default"
            data-v-589db232=""
          />
        </button>
        
      </div>
      <!---->
      <!---->
    </span>
  </li>
  <li
    data-v-589db232=""
  >
    <span
      class="v-chip v-theme--light v-chip--density-default v-chip--size-default v-chip--variant-tonal detail"
      data-v-589db232=""
      draggable="false"
    >
      
      <!---->
      <span
        class="v-chip__underlay"
      />
      
      <!---->
      <!---->
      <div
        class="v-chip__content"
        data-no-activator=""
      >
        
        <i
          aria-hidden="true"
          class="mdi mdi-emoticon-outline mdi v-icon notranslate v-theme--light v-icon--size-default text-cockpit-highlight mr-2"
          data-v-589db232=""
        />
         Yeah! 
        <button
          data-v-589db232=""
        >
          <i
            aria-hidden="true"
            class="mdi-close mdi v-icon notranslate v-theme--light v-icon--size-default"
            data-v-589db232=""
          />
        </button>
        
      </div>
      <!---->
      <!---->
    </span>
  </li>
  
</ul>
`;

exports[`UserDetails > renders in non-editable mode 1`] = `
<ul
  class="details"
  data-v-589db232=""
>
  
  <li
    data-v-589db232=""
  >
    <span
      class="v-chip v-theme--light v-chip--density-default v-chip--size-default v-chip--variant-tonal detail"
      data-v-589db232=""
      draggable="false"
    >
      
      <!---->
      <span
        class="v-chip__underlay"
      />
      
      <!---->
      <!---->
      <div
        class="v-chip__content"
        data-no-activator=""
      >
        
        <i
          aria-hidden="true"
          class="mdi mdi-school-outline mdi v-icon notranslate v-theme--light v-icon--size-default text-cockpit-highlight mr-2"
          data-v-589db232=""
        />
         I am a student 
        <!--v-if-->
        
      </div>
      <!---->
      <!---->
    </span>
  </li>
  <li
    data-v-589db232=""
  >
    <span
      class="v-chip v-theme--light v-chip--density-default v-chip--size-default v-chip--variant-tonal detail"
      data-v-589db232=""
      draggable="false"
    >
      
      <!---->
      <span
        class="v-chip__underlay"
      />
      
      <!---->
      <!---->
      <div
        class="v-chip__content"
        data-no-activator=""
      >
        
        <i
          aria-hidden="true"
          class="mdi mdi-briefcase-outline mdi v-icon notranslate v-theme--light v-icon--size-default text-cockpit-highlight mr-2"
          data-v-589db232=""
        />
         I am a worker 
        <!--v-if-->
        
      </div>
      <!---->
      <!---->
    </span>
  </li>
  <li
    data-v-589db232=""
  >
    <span
      class="v-chip v-theme--light v-chip--density-default v-chip--size-default v-chip--variant-tonal detail"
      data-v-589db232=""
      draggable="false"
    >
      
      <!---->
      <span
        class="v-chip__underlay"
      />
      
      <!---->
      <!---->
      <div
        class="v-chip__content"
        data-no-activator=""
      >
        
        <i
          aria-hidden="true"
          class="mdi mdi-briefcase-outline mdi v-icon notranslate v-theme--light v-icon--size-default text-cockpit-highlight mr-2"
          data-v-589db232=""
        />
         I really like my job 
        <!--v-if-->
        
      </div>
      <!---->
      <!---->
    </span>
  </li>
  <li
    data-v-589db232=""
  >
    <span
      class="v-chip v-theme--light v-chip--density-default v-chip--size-default v-chip--variant-tonal detail"
      data-v-589db232=""
      draggable="false"
    >
      
      <!---->
      <span
        class="v-chip__underlay"
      />
      
      <!---->
      <!---->
      <div
        class="v-chip__content"
        data-no-activator=""
      >
        
        <i
          aria-hidden="true"
          class="mdi mdi-web mdi v-icon notranslate v-theme--light v-icon--size-default text-cockpit-highlight mr-2"
          data-v-589db232=""
        />
         English 
        <!--v-if-->
        
      </div>
      <!---->
      <!---->
    </span>
  </li>
  <li
    data-v-589db232=""
  >
    <span
      class="v-chip v-theme--light v-chip--density-default v-chip--size-default v-chip--variant-tonal detail"
      data-v-589db232=""
      draggable="false"
    >
      
      <!---->
      <span
        class="v-chip__underlay"
      />
      
      <!---->
      <!---->
      <div
        class="v-chip__content"
        data-no-activator=""
      >
        
        <i
          aria-hidden="true"
          class="mdi mdi-map-marker-outline mdi v-icon notranslate v-theme--light v-icon--size-default text-cockpit-highlight mr-2"
          data-v-589db232=""
        />
         Berlin 
        <!--v-if-->
        
      </div>
      <!---->
      <!---->
    </span>
  </li>
  <li
    data-v-589db232=""
  >
    <span
      class="v-chip v-theme--light v-chip--density-default v-chip--size-default v-chip--variant-tonal detail"
      data-v-589db232=""
      draggable="false"
    >
      
      <!---->
      <span
        class="v-chip__underlay"
      />
      
      <!---->
      <!---->
      <div
        class="v-chip__content"
        data-no-activator=""
      >
        
        <i
          aria-hidden="true"
          class="mdi mdi-emoticon-outline mdi v-icon notranslate v-theme--light v-icon--size-default text-cockpit-highlight mr-2"
          data-v-589db232=""
        />
         Yeah! 
        <!--v-if-->
        
      </div>
      <!---->
      <!---->
    </span>
  </li>
  
</ul>
`;

exports[`UserDetails > renders placeholders 1`] = `
<ul
  class="details"
  data-v-589db232=""
>
  
  <li
    data-v-589db232=""
  >
    <span
      class="v-chip v-theme--light v-chip--density-default v-chip--size-default v-chip--variant-tonal detail"
      data-v-589db232=""
      draggable="false"
    >
      
      <!---->
      <span
        class="v-chip__underlay"
      />
      
      <!---->
      <!---->
      <div
        class="v-chip__content"
        data-no-activator=""
      >
        
        <i
          aria-hidden="true"
          class="mdi mdi-map-marker-outline mdi v-icon notranslate v-theme--light v-icon--size-default text-cockpit-highlight mr-2"
          data-v-589db232=""
        />
         Mein Standort 
        <!--v-if-->
        
      </div>
      <!---->
      <!---->
    </span>
  </li>
  <li
    data-v-589db232=""
  >
    <span
      class="v-chip v-theme--light v-chip--density-default v-chip--size-default v-chip--variant-tonal detail"
      data-v-589db232=""
      draggable="false"
    >
      
      <!---->
      <span
        class="v-chip__underlay"
      />
      
      <!---->
      <!---->
      <div
        class="v-chip__content"
        data-no-activator=""
      >
        
        <i
          aria-hidden="true"
          class="mdi mdi-briefcase-outline mdi v-icon notranslate v-theme--light v-icon--size-default text-cockpit-highlight mr-2"
          data-v-589db232=""
        />
         Meine Arbeit 
        <!--v-if-->
        
      </div>
      <!---->
      <!---->
    </span>
  </li>
  <li
    data-v-589db232=""
  >
    <span
      class="v-chip v-theme--light v-chip--density-default v-chip--size-default v-chip--variant-tonal detail"
      data-v-589db232=""
      draggable="false"
    >
      
      <!---->
      <span
        class="v-chip__underlay"
      />
      
      <!---->
      <!---->
      <div
        class="v-chip__content"
        data-no-activator=""
      >
        
        <i
          aria-hidden="true"
          class="mdi mdi-school-outline mdi v-icon notranslate v-theme--light v-icon--size-default text-cockpit-highlight mr-2"
          data-v-589db232=""
        />
         Meine Ausbildung 
        <!--v-if-->
        
      </div>
      <!---->
      <!---->
    </span>
  </li>
  <li
    data-v-589db232=""
  >
    <span
      class="v-chip v-theme--light v-chip--density-default v-chip--size-default v-chip--variant-tonal detail"
      data-v-589db232=""
      draggable="false"
    >
      
      <!---->
      <span
        class="v-chip__underlay"
      />
      
      <!---->
      <!---->
      <div
        class="v-chip__content"
        data-no-activator=""
      >
        
        <i
          aria-hidden="true"
          class="mdi mdi-emoticon-outline mdi v-icon notranslate v-theme--light v-icon--size-default text-cockpit-highlight mr-2"
          data-v-589db232=""
        />
         Wie ich mich heute fühle 
        <!--v-if-->
        
      </div>
      <!---->
      <!---->
    </span>
  </li>
  <li
    data-v-589db232=""
  >
    <span
      class="v-chip v-theme--light v-chip--density-default v-chip--size-default v-chip--variant-tonal detail"
      data-v-589db232=""
      draggable="false"
    >
      
      <!---->
      <span
        class="v-chip__underlay"
      />
      
      <!---->
      <!---->
      <div
        class="v-chip__content"
        data-no-activator=""
      >
        
        <i
          aria-hidden="true"
          class="mdi mdi-web mdi v-icon notranslate v-theme--light v-icon--size-default text-cockpit-highlight mr-2"
          data-v-589db232=""
        />
         Sprachen, die ich spreche 
        <!--v-if-->
        
      </div>
      <!---->
      <!---->
    </span>
  </li>
  
</ul>
`;

exports[`UserDetails > renders placeholders in editable mode 1`] = `
<ul
  class="details editable"
  data-v-589db232=""
>
  
  <li
    data-v-589db232=""
  >
    <span
      class="v-chip v-theme--light v-chip--density-default v-chip--size-default v-chip--variant-tonal detail"
      data-v-589db232=""
      draggable="false"
    >
      
      <!---->
      <span
        class="v-chip__underlay"
      />
      
      <!---->
      <!---->
      <div
        class="v-chip__content"
        data-no-activator=""
      >
        
        <i
          aria-hidden="true"
          class="mdi mdi-map-marker-outline mdi v-icon notranslate v-theme--light v-icon--size-default text-cockpit-highlight mr-2"
          data-v-589db232=""
        />
         Mein Standort 
        <!--v-if-->
        
      </div>
      <!---->
      <!---->
    </span>
  </li>
  <li
    data-v-589db232=""
  >
    <span
      class="v-chip v-theme--light v-chip--density-default v-chip--size-default v-chip--variant-tonal detail"
      data-v-589db232=""
      draggable="false"
    >
      
      <!---->
      <span
        class="v-chip__underlay"
      />
      
      <!---->
      <!---->
      <div
        class="v-chip__content"
        data-no-activator=""
      >
        
        <i
          aria-hidden="true"
          class="mdi mdi-briefcase-outline mdi v-icon notranslate v-theme--light v-icon--size-default text-cockpit-highlight mr-2"
          data-v-589db232=""
        />
         Meine Arbeit 
        <!--v-if-->
        
      </div>
      <!---->
      <!---->
    </span>
  </li>
  <li
    data-v-589db232=""
  >
    <span
      class="v-chip v-theme--light v-chip--density-default v-chip--size-default v-chip--variant-tonal detail"
      data-v-589db232=""
      draggable="false"
    >
      
      <!---->
      <span
        class="v-chip__underlay"
      />
      
      <!---->
      <!---->
      <div
        class="v-chip__content"
        data-no-activator=""
      >
        
        <i
          aria-hidden="true"
          class="mdi mdi-school-outline mdi v-icon notranslate v-theme--light v-icon--size-default text-cockpit-highlight mr-2"
          data-v-589db232=""
        />
         Meine Ausbildung 
        <!--v-if-->
        
      </div>
      <!---->
      <!---->
    </span>
  </li>
  <li
    data-v-589db232=""
  >
    <span
      class="v-chip v-theme--light v-chip--density-default v-chip--size-default v-chip--variant-tonal detail"
      data-v-589db232=""
      draggable="false"
    >
      
      <!---->
      <span
        class="v-chip__underlay"
      />
      
      <!---->
      <!---->
      <div
        class="v-chip__content"
        data-no-activator=""
      >
        
        <i
          aria-hidden="true"
          class="mdi mdi-emoticon-outline mdi v-icon notranslate v-theme--light v-icon--size-default text-cockpit-highlight mr-2"
          data-v-589db232=""
        />
         Wie ich mich heute fühle 
        <!--v-if-->
        
      </div>
      <!---->
      <!---->
    </span>
  </li>
  <li
    data-v-589db232=""
  >
    <span
      class="v-chip v-theme--light v-chip--density-default v-chip--size-default v-chip--variant-tonal detail"
      data-v-589db232=""
      draggable="false"
    >
      
      <!---->
      <span
        class="v-chip__underlay"
      />
      
      <!---->
      <!---->
      <div
        class="v-chip__content"
        data-no-activator=""
      >
        
        <i
          aria-hidden="true"
          class="mdi mdi-web mdi v-icon notranslate v-theme--light v-icon--size-default text-cockpit-highlight mr-2"
          data-v-589db232=""
        />
         Sprachen, die ich spreche 
        <!--v-if-->
        
      </div>
      <!---->
      <!---->
    </span>
  </li>
  
</ul>
`;
